--- a/Files/css/contact.css
+++ b/Files/css/contact.css
@@ -243,7 +243,7 @@ span {
 }
 .footer {
   text-align: center;
-  background: #353a3f;
+  background: #353A3F;
   color: white;
   padding: 10px;
   font-family: "Maven Pro", serif;
